deep source 확인 후 수정
